Mon May 16 22:40:43 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.h, {bcc32,win32,wince}/Makefile.sub: moved rb_[ugp]id_t
	  to get rid of redefinition warnings on mingw.

	* class.c (rb_class_init_copy): singleton class is disallowed to copy,
	  from its definition.  fixed: [ruby-talk:142749]

	* parse.y (pragma_encoding): add prototype to suppress false warning
	  by VC.

Mon May 16 03:29:01 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* win32/win32.{h,c}: define rb_{p,g,u}id_t.

Mon May 16 00:21:02 2005  Tanaka Akira  <akr@m17n.org>

	* lib/pathname.rb (Pathname#unlink): use SystemCallError instead of
	  Errno::EISDIR because EISDIR is not portable.
	  [ruby-core:5001]

Sun May 15 22:28:10 2005  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (DRbObject#method_missing): use raise(exception).
	  [ruby-dev:26164]

Sun May 15 18:56:35 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, ruby.h: define rb_[pgu]id_t macros instead of typedefs
	  to get rid of types which might not be defined yet.  [ruby-dev:26165]

Sun May 15 14:35:46 2005  Tanaka Akira  <akr@m17n.org>

	* lib/pathname.rb (Pathname#unlink): unlink a symlink to a directory
	  was failed.  [ruby-core:4992]

Sun May 15 09:57:30 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/win32.c (unixtime_to_filetime): deal with DST.
	  [ruby-talk:141817]

Sat May 14 23:59:11 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* error.c (exc_exception, {exit,name_err,syserr}_initialize): call
	  Execption#initialize.  fixed: [ruby-talk:142593]

Sat May 14 23:56:41 2005  Erik Huelsmann  <ehuels@gmail.com>

	* configure.in: Check for the availability of pid_t, gid_t and uid_t and
	  remove AC_TYPE_UID_T.  fixed: [ruby-core:04745]

	* defines.h: Remove pid_t typedef.

	* ruby.h: Define rb_pid_t, rb_gid_t and rb_uid_t in accordance with
	 the available system types.

	* process.c: Change instances of pid_t and gid_t to their rb_*
	 counterparts.
